web-69 - fix overlapping icon on select

--- a/wetmap/src/components/reusables/select/style.scss
+++ b/wetmap/src/components/reusables/select/style.scss
@@ -32,7 +32,6 @@
     border: 1px solid transparent;
     display: flex;
     position: relative;
-    flex-wrap: wrap;
 
     .icon-left {
       display: contents;
